# torch-ctcdecode

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ctcdecode-scm-1.rockspec  setup.py
clib/: CMakeLists.txt
clib/src/: cpu_binding.cpp  ctc_generate_trie.cpp  thctc.cpp  thctc.h
clib/src/ctc/: ctc_decoder.h  ctc_status_test.cpp
clib/src/detail/: env_time.cpp  env_time.h  error_codes.proto  logging.cpp  logging.h  macros.h  status.cpp  status.h  types.h
clib/src/gtl/: top_n_test.cc  top_n_test.cpp
clib/src/random/: exact_uniform_int.h  philox_random.h  random_distributions.h  simple_philox.cpp  simple_philox.h
ctc/: ffi.lua  init.lua
lib/ctcdecode/: .clang-format  CMakeLists.txt
lib/ctcdecode/cmake/: dependencies.cmake
lib/ctcdecode/cmake/patches/kenlm/: CMakeLists.txt  patch.cmake
lib/ctcdecode/cmake/patches/kenlm/cmake/: KenLMConfig.cmake.in
lib/ctcdecode/cmake/patches/marisa/: CMakeLists.txt  patch.cmake
lib/ctcdecode/cmake/patches/marisa/cmake/: MarisaConfig.cmake.in
lib/ctcdecode/src/ctc/: base_decoder.h  beam_search_decoder.h  constants.h  greedy_decoder.cc  greedy_decoder.h  label_map.cc  label_map.h  log_sum_exp.h
lib/ctcdecode/src/ctc/beam_search/: base_beam_comparer.h  base_beam_scorer.h  beam_entry.h  beam_probability.h  empty_beam_state.h  ngram_beam_scorer.cc  ngram_beam_scorer.h  ngram_beam_state.h
lib/ctcdecode/src/gtl/: top_n.h
lib/ctcdecode/src/util/: macros.h  status.cc  status.h  unsigned_to_signed.h
libthctc/ctc/: ctc_beam_entry.h  ctc_beam_scorer.h  ctc_beam_scorer_klm.h  ctc_beam_search.h  ctc_labels.h  ctc_loss_util.h  ctc_status.cpp  ctc_status.h  ctc_trie_node.h
libthctc/gtl/: stl_util.h  top_n.h
lua/: BeamSearchDecoder.lua  DefaultBeamScorer.lua  NGramBeamScorer.lua  NGramDecoder.lua  env.lua  init.lua
patches/kenlm/: CMakeLists.txt
pytorch/: clib
rocks/: ctc-scm-1.rockspec
src/: beam_search_decoder.cc  beam_search_decoder.h  beam_search_decoder_macros.h  cpu_binding.cpp  cpu_binding.h  ctc_beam_entry.h  ctc_beam_scorer_klm.h  ctc_beam_search.h  ctc_decoder.h  ctc_labels.h  ctc_loss_util.h  ctc_trie_node.h  default_beam_scorer.cc  default_beam_scorer.h  init.cpp  init.h  ngram_beam_scorer.cc  ngram_beam_scorer.h  ngram_decoder.cc  ngram_decoder.h
src/ctc/: ctc_beam_entry.h  ctc_beam_scorer.h  ctc_beam_search.h  ctc_decoder.h  ctc_kenlm_beam_scorer.h  ctc_labels.h  ctc_loss_util.h  ctc_status.cpp  ctc_status.h  ctc_trie_node.h
src/gtl/: stl_util.h  top_n.h
tests/: file.txt  test.lua  test_generate_lm_trie.lua
tests/data/: label_map  test.arpa
torch/: CMakeLists.txt  ctc-scm-1.rockspec  libthctc  thctc-scm-1.rockspec  torch_ctc-scm-1.rockspec
torch/clib/: CMakeLists.txt
torch/cmake/: third_party.cmake
torch/ctc/: decoder.lua  ffi.lua.in  init.lua  scorer.lua
torch/tests/: arpa  ctc_labels.cpp  labels  load_top_n.cc  smoke_test.lua  test_decoders.lua  test_generate_lm_trie.lua  trie  vocab
torch/thctc/: env.lua  ffi.lua.in
torch/torch_ctc/: ffi.lua  init.lua
